# Faith-ROS

./: .gitignore  CMakeLists.txt  README.md  config.ini  jetson_readme.txt  package.xml  setup.py
src/: camera.cpp  inference.py  master.cpp
src/class/: FileCollector.cpp  VideoCollector.cpp  VideoPublisher.cpp
src/include/: FileCollector.hpp  VideoCollector.hpp  VideoPublisher.hpp
src/py/: OnnxInference.py  YoloInference.py  collector.py  config.ini  inference.py
